--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -19,6 +19,7 @@
                 @if (games == null)
                 {
                     <tr>
+                        <td colspan="3">Loading...</td>
                         @* LoadingCountCodePlaceholder *@
                     </tr>
                 }
