--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -7,6 +7,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.DataTransferObjects
-@using ApplicationNamePlaceholder.BusinessLogic.Services
-@using ApplicationNamePlaceholder.Client
+@using BlazorCrudDotNet8.BusinessLogic.Entities.DataTransferObjects
+@using BlazorCrudDotNet8.BusinessLogic.Services
+@using BlazorCrudDotNet8.Client
