--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -1,7 +1,7 @@
 @page "/admin/UrlNamePlaceholder-list"
 @rendermode InteractiveServer
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
-@inject IEntityNamePlaceholderAdminService EntityNamePlaceholderAdminService
+@inject IGameAdminService GameAdminService
 @attribute [StreamRendering]
 
 <section>
@@ -54,7 +54,7 @@
 </section>
 
 @code {
-    List<EntityNamePlaceholder>? TableLowercaseNamePlaceholder = null;
+    List<Game>? TableLowercaseNamePlaceholder = null;
 
     protected override async Task OnInitializedAsync()
     {
@@ -66,6 +66,6 @@
             return;
         }
 
-        TableLowercaseNamePlaceholder = await EntityNamePlaceholderAdminService.GetAllAsync(userName);
+        TableLowercaseNamePlaceholder = await GameAdminService.GetAllAsync(userName);
     }
 }
