gawk -i inplace "{ gsub(/TableLowercaseNamePlaceholder/, \"games\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -18,14 +18,14 @@
                 </tr>
             </thead>
             <tbody>
-                @if (TableLowercaseNamePlaceholder == null)
+                @if (games == null)
                 {
                     <tr>
                         <td colspan="4">Loading...</td>
                         @* LoadingCountCodePlaceholder *@
                     </tr>
                 }
-                else if (TableLowercaseNamePlaceholder.Count == 0)
+                else if (games.Count == 0)
                 {
                     <tr>
                         <td colspan="4">No to do items found.</td>
@@ -34,7 +34,7 @@
                 }
                 else
                 {
-                    @foreach (var game in TableLowercaseNamePlaceholder)
+                    @foreach (var game in games)
                     {
                         <tr>
                             <td>@game.Id</td>
@@ -54,7 +54,7 @@
 </section>
 
 @code {
-    List<Game>? TableLowercaseNamePlaceholder = null;
+    List<Game>? games = null;
 
     protected override async Task OnInitializedAsync()
     {
@@ -66,6 +66,6 @@
             return;
         }
 
-        TableLowercaseNamePlaceholder = await GameAdminService.GetAllAsync(userName);
+        games = await GameAdminService.GetAllAsync(userName);
     }
 }
