--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder-list"
+@page "/admin/game-list"
 @rendermode InteractiveServer
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject IGameAdminService GameAdminService
@@ -42,14 +42,14 @@
                             @* <td>@game.Title</td>
                             <td>@game.ToDoList?.Title</td> *@
                             <td>
-                                <a href="@("/admin/UrlNamePlaceholder-edit/" + game.Id)">Edit</a>
+                                <a href="@("/admin/game-edit/" + game.Id)">Edit</a>
                             </td>
                         </tr>
                     }
                 }
             </tbody>
         </table>
-        <a href="/admin/UrlNamePlaceholder-edit">Create</a>
+        <a href="/admin/game-edit">Create</a>
     </article>
 </section>
 
