gawk -i inplace "{ gsub(/HumanNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor

--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -11,11 +11,11 @@
 <section>
     @if (Id.Equals(Guid.Empty))
     {
-        <h1>Create HumanNamePlaceholder</h1>
+        <h1>Create Game</h1>
     }
     else
     {
-        <h1>Edit HumanNamePlaceholder</h1>
+        <h1>Edit Game</h1>
     }
     <article>
         <EditForm class="container" Model="gameAdminEditModel" OnSubmit="HandleSubmit">
