--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -1,5 +1,5 @@
-@page "/admin/UrlNamePlaceholder-edit"
-@page "/admin/UrlNamePlaceholder-edit/{id:guid}"
+@page "/admin/game-edit"
+@page "/admin/game-edit/{id:guid}"
 @rendermode InteractiveAuto
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
@@ -62,7 +62,7 @@
                     }
                 </div>
                 <div class="col">
-                    <a href="/admin/UrlNamePlaceholder-list">Cancel</a>
+                    <a href="/admin/game-list">Cancel</a>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                 return;
             }
 
-            NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{newGameAdminDto.Id}");
+            NavigationManager.NavigateTo($"/admin/game-edit/{newGameAdminDto.Id}");
         }
         else
         {
@@ -176,7 +176,7 @@
         }
 
         await GameAdminService.DeleteAsync(userName, Id);
-        NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-list");
+        NavigationManager.NavigateTo($"/admin/game-list");
     }
 
 
