gawk -i inplace "{ gsub(/@\* ListItemCodePlaceholder \*@/, \"<td>@game.Name</td>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ @\* ListItemCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -39,6 +39,7 @@
                     {
                         <tr>
                             <td>@game.Id</td>
+                            <td>@game.Name</td>
                             @* ListItemCodePlaceholder *@
                             @* <td>@game.Title</td>
                             <td>@game.ToDoList?.Title</td> *@
