--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -31,6 +31,7 @@
                 {
                     <tr>
                         <td colspan="4">No to do items found.</td>
+                        <td colspan="3">No games found.</td>
                         @* ZeroCountCodePlaceholder *@
                     </tr>
                 }
