gawk -i inplace "{ gsub(/@\* LoadingCountCodePlaceholder \*@/, \"<td colspan=\\\"3\\\">Loading...</td>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ @\* LoadingCountCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -23,6 +23,7 @@
                 {
                     <tr>
                         <td colspan="4">Loading...</td>
+                        <td colspan="3">Loading...</td>
                         @* LoadingCountCodePlaceholder *@
                     </tr>
                 }
