--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -7,8 +7,8 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ApplicationNamePlaceholder.BusinessLogic.Entities
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.Dtos
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.Models
-@using ApplicationNamePlaceholder.BusinessLogic.Services
-@using ApplicationNamePlaceholder.Client
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Entities.Dtos
+@using BlazorCrudDotNet8.BusinessLogic.Entities.Models
+@using BlazorCrudDotNet8.BusinessLogic.Services
+@using BlazorCrudDotNet8.Client
