--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -30,6 +30,7 @@
                 else if (games.Count == 0)
                 {
                     <tr>
+                        <td colspan="3">No games found.</td>
                         @* ZeroCountCodePlaceholder *@
                         @* <td colspan="4">No to do items found.</td> *@
                     </tr>
