Added acceptance tests for game pages.

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -4,6 +4,8 @@
 @inject IGameAdminService GameAdminService
 @attribute [StreamRendering]
 
+<PageTitle>Game List</PageTitle>
+
 <section>
     <h1>Game List</h1>
     <article>
