--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -8,14 +8,23 @@
 @* InjectionCodePlaceholder *@
 @* @inject IToDoListAdminService ToDoListAdminService *@
 
-<section>
   @if (Id.Equals(Guid.Empty))
   {
-    <h1>Create Game</h1>
+    <PageTitle>Game Creation</PageTitle>
   }
   else
   {
-    <h1>Edit Game</h1>
+    <PageTitle>Game Modification</PageTitle>
+  }
+
+<section>
+  @if (Id.Equals(Guid.Empty))
+  {
+    <h1>Game Creation</h1>
+  }
+  else
+  {
+    <h1>Game Modification</h1>
   }
   <article>
     <EditForm class="container" Model="gameAdminEditModel" OnSubmit="HandleSubmit">
@@ -24,7 +33,7 @@
         <div class="col">
           <label>
             Name:
-            <InputText @bind-Value="gameAdminEditModel.Name" />
+            <InputText @bind-Value="gameAdminEditModel.Name" data-testid="gameAdminEditName" />
           </label>
         </div>
       </div>
@@ -66,13 +75,20 @@
                 <div class="col">
                     @if (!Id.Equals(Guid.Empty))
                     {
-                        <button @onclick="Delete" type="button" class="btn btn-danger">Delete</button>
+                        <button @onclick="Remove" type="button" class="btn btn-danger">Remove</button>
                     }
                 </div>
                 <div class="col">
                     <a href="/admin/game-list">Cancel</a>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+                    @if (Id.Equals(Guid.Empty))
+                    {
+                        <button type="submit" class="btn btn-primary">Create</button>
+                    }
+                    else
+                    {
+                        <button type="submit" class="btn btn-primary">Modify</button>
+                    }
+               </div>
             </div>
         </EditForm>
     </article>
@@ -168,7 +184,7 @@
         }
     }
 
-    async Task Delete()
+    async Task Remove()
     {
         var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
         var userName = authState.User.Identity?.Name!;
