--- a/BlazorCrudDotNet8/Components/Pages/Admin/ApplicationUserAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/ApplicationUserAdminList.razor
@@ -4,6 +4,8 @@
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @attribute [StreamRendering]
 
+<PageTitle>Application User List</PageTitle>
+
 <section>
     <h1>Application User List</h1>
     <article>
