--- a/BlazorCrudDotNet8.Client/Pages/Admin/ApplicationRoleAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/ApplicationRoleAdminEdit.razor
@@ -5,36 +5,52 @@
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
 
+@if (Id.Equals(Guid.Empty))
+{
+  <PageTitle>Application Role Creation</PageTitle>
+}
+else
+{
+  <PageTitle>Application Role Modification</PageTitle>
+}
+
 <section>
-    @if (Id.Equals(Guid.Empty))
-    {
-        <h1>Create Application Role</h1>
-    }
-    else
-    {
-        <h1>Edit Application Role</h1>
-    }
-    <article>
-        <EditForm class="container" Model="applicationRoleAdminEditModel" OnSubmit="HandleSubmit">
-            <div class="row">
-                <div class="col">
-                    <label>
-                        Name:
-                        <InputText @bind-Value="applicationRoleAdminEditModel.Name">@applicationRoleAdminEditModel.Name</InputText>
-                    </label>
-                </div>
-            </div>
+  @if (Id.Equals(Guid.Empty))
+  {
+    <h1>Application Role Creation</h1>
+  }
+  else
+  {
+    <h1>Application Role Modification</h1>
+  }
+  <article>
+    <EditForm class="container" Model="applicationRoleAdminEditModel" OnSubmit="HandleSubmit">
+      <div class="row">
+        <div class="col">
+          <label>
+            Name:
+            <InputText @bind-Value="applicationRoleAdminEditModel.Name" data-testid="applicationRoleAdminEditName" />
+          </label>
+        </div>
+      </div>
             <div class="row">
                 <div class="col">
                     @if (!Id.Equals(Guid.Empty))
                     {
-                        <button @onclick="Delete" type="button" class="btn btn-danger">Delete</button>
+                        <button @onclick="Remove" type="button" class="btn btn-danger">Remove</button>
                     }
                 </div>
                 <div class="col">
                     <a href="/admin/application-role-list">Cancel</a>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+                    @if (Id.Equals(Guid.Empty))
+                    {
+                        <button type="submit" class="btn btn-primary">Create</button>
+                    }
+                    else
+                    {
+                        <button type="submit" class="btn btn-primary">Modify</button>
+                    }
+               </div>
             </div>
         </EditForm>
     </article>
@@ -45,10 +61,23 @@
     public Guid Id { get; set; }
     ApplicationRoleAdminEditModel applicationRoleAdminEditModel { get; set; } = new ApplicationRoleAdminEditModel();
 
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
+        var userName = authState.User.Identity?.Name;
+
+        if (userName == null)
+        {
+            return;
+        }
+
+        await base.OnInitializedAsync();
+    }
+
     protected override async Task OnParametersSetAsync()
     {
         var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
-        var userName = authState.User.Identity?.Name!;
+        var userName = authState.User.Identity?.Name;
 
         if (userName == null)
         {
@@ -82,28 +111,24 @@
             return;
         }
 
-        if (applicationRoleAdminEditModel == null)
-        {
-            return;
-        }
-
         if (string.IsNullOrWhiteSpace(applicationRoleAdminEditModel.Name))
         {
             return;
         }
 
         var applicationRoleAdminDto = ApplicationRoleAdminEditModel.ToApplicationRoleAdminDto(applicationRoleAdminEditModel);
+        applicationRoleAdminDto.ApplicationUserName = userName;
 
         if (Id.Equals(Guid.Empty))
         {
-            var databaseApplicationRoleAdminDto = await ApplicationRoleAdminService.AddAsync(applicationRoleAdminDto);
+            var newApplicationRoleAdminDto = await ApplicationRoleAdminService.AddAsync(applicationRoleAdminDto);
 
-            if (databaseApplicationRoleAdminDto == null)
+            if (newApplicationRoleAdminDto == null)
             {
                 return;
             }
 
-            NavigationManager.NavigateTo($"/admin/application-role-edit/{databaseApplicationRoleAdminDto.Id}");
+            NavigationManager.NavigateTo($"/admin/application-role-edit/{newApplicationRoleAdminDto.Id}");
         }
         else
         {
@@ -111,7 +136,7 @@
         }
     }
 
-    async Task Delete()
+    async Task Remove()
     {
         var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
         var userName = authState.User.Identity?.Name!;
