--- a/BlazorCrudDotNet8.Client/Pages/Admin/ApplicationUserAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/ApplicationUserAdminEdit.razor
@@ -6,17 +6,26 @@
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
 
+@if (Id.Equals(Guid.Empty))
+{
+  <PageTitle>Application User Creation</PageTitle>
+}
+else
+{
+  <PageTitle>Application User Modification</PageTitle>
+}
+
 <section>
-    @if (Id.Equals(Guid.Empty))
-    {
-        <h1>Create Application User</h1>
-    }
-    else
-    {
-        <h1>Edit Application User</h1>
-    }
-    <article>
-        <EditForm class="container" Model="applicationUserAdminEditModel" OnSubmit="HandleSubmit">
+  @if (Id.Equals(Guid.Empty))
+  {
+    <h1>Application User Creation</h1>
+  }
+  else
+  {
+    <h1>Application User Modification</h1>
+  }
+  <article>
+    <EditForm class="container" Model="applicationUserAdminEditModel" OnSubmit="HandleSubmit">
             <div class="row">
                 <div class="col">
                     @if (applicationUserAdminEditModel.ApplicationRoles == null)
@@ -63,41 +72,48 @@
                     }
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <label>
-                        Email:
-                        <InputText @bind-Value="applicationUserAdminEditModel.Email">@applicationUserAdminEditModel.Email</InputText>
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <label>
-                        Phone Number:
-                        <InputText @bind-Value="applicationUserAdminEditModel.PhoneNumber">@applicationUserAdminEditModel.PhoneNumber</InputText>
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <label>
-                        UserName:
-                        <InputText @bind-Value="applicationUserAdminEditModel.UserName">@applicationUserAdminEditModel.UserName</InputText>
-                    </label>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col">
+          <label>
+            Email:
+            <InputText @bind-Value="applicationUserAdminEditModel.Email" data-testid="applicationUserAdminEditEmail" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label>
+            Phone Number:
+            <InputText @bind-Value="applicationUserAdminEditModel.PhoneNumber" data-testid="applicationUserAdminEditPhoneNumber" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label>
+            UserName:
+            <InputText @bind-Value="applicationUserAdminEditModel.UserName" data-testid="applicationUserAdminEditUserName" />
+          </label>
+        </div>
+      </div>
             <div class="row">
                 <div class="col">
                     @if (!Id.Equals(Guid.Empty))
                     {
-                        <button @onclick="Delete" type="button" class="btn btn-danger">Delete</button>
+                        <button @onclick="Remove" type="button" class="btn btn-danger">Remove</button>
                     }
                 </div>
                 <div class="col">
                     <a href="/admin/application-user-list">Cancel</a>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+                    @if (Id.Equals(Guid.Empty))
+                    {
+                        <button type="submit" class="btn btn-primary">Create</button>
+                    }
+                    else
+                    {
+                        <button type="submit" class="btn btn-primary">Modify</button>
+                    }
+               </div>
             </div>
         </EditForm>
     </article>
@@ -112,25 +128,20 @@
     protected override async Task OnInitializedAsync()
     {
         var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
-        var userName = authState.User.Identity?.Name!;
+        var userName = authState.User.Identity?.Name;
 
         if (userName == null)
         {
             return;
         }
 
-        var applicationRoleListResult = await ApplicationRoleAdminService.GetAllAsync(userName);
-
-        if (applicationRoleListResult != null)
-        {
-            applicationRoleList = applicationRoleListResult;
-        }
+        await base.OnInitializedAsync();
     }
 
     protected override async Task OnParametersSetAsync()
     {
         var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
-        var userName = authState.User.Identity?.Name!;
+        var userName = authState.User.Identity?.Name;
 
         if (userName == null)
         {
@@ -179,14 +190,14 @@
 
         if (Id.Equals(Guid.Empty))
         {
-            var databaseApplicationUserAdminDto = await ApplicationUserAdminService.AddAsync(applicationUserAdminDto);
+            var newApplicationUserAdminDto = await ApplicationUserAdminService.AddAsync(applicationUserAdminDto);
 
-            if (databaseApplicationUserAdminDto == null)
+            if (newApplicationUserAdminDto == null)
             {
                 return;
             }
 
-            NavigationManager.NavigateTo($"/admin/application-user-edit/{databaseApplicationUserAdminDto.Id}");
+            NavigationManager.NavigateTo($"/admin/application-user-edit/{newApplicationUserAdminDto.Id}");
         }
         else
         {
@@ -194,7 +205,7 @@
         }
     }
 
-    async Task Delete()
+    async Task Remove()
     {
         var authState = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
         var userName = authState.User.Identity?.Name!;
