gawk -i inplace "{ gsub(/HumanNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -4,10 +4,10 @@
 @inject IGameAdminService GameAdminService
 @attribute [StreamRendering]
 
-<PageTitle>HumanNamePlaceholder List</PageTitle>
+<PageTitle>Game List</PageTitle>
 
 <section>
-  <h1>HumanNamePlaceholder List</h1>
+  <h1>Game List</h1>
   <article>
     <table class="table table-striped table-sm">
       <thead>
