gawk -i inplace "{ gsub(/@\* ListItemCodePlaceholder \*@/, \"<td>@game.Name</td>\n\ \ \ \ \ \ \ \ \ \ @\* ListItemCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -39,7 +39,8 @@
           {
             <tr>
               <td>@game.Id</td>
-              @* ListItemCodePlaceholder *@
+              <td>@game.Name</td>
+          @* ListItemCodePlaceholder *@
               <td>
                 <a href="@("/admin/game-edit/" + game.Id)">Edit</a>
               </td>
