gawk -i inplace "{ gsub(/@\* LoadingCountCodePlaceholder \*@/, \"<td colspan=\\\"3\\\">Loading...</td>\n\ \ \ \ \ \ \ \ \ \ \ \ @\* LoadingCountCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -24,6 +24,7 @@
         @if (games == null)
         {
           <tr>
+            <td colspan="3">Loading...</td>
             @* LoadingCountCodePlaceholder *@
           </tr>
         }
