--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -40,7 +40,8 @@
             <tr>
               <td>@game.Id</td>
 
-              @* ListItemCodePlaceholder *@
+              <td>@game.Name</td>
+          @* ListItemCodePlaceholder *@
 
               <td>
                 <a href="@("/admin/game-edit/" + game.Id)">Edit</a>
