--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -5,10 +5,10 @@
 @attribute [StreamRendering]
 @attribute [Authorize(Roles = "Admin")]
 
-<PageTitle>HumanNamePlaceholder List</PageTitle>
+<PageTitle>Game List</PageTitle>
 
 <section>
-  <h1>HumanNamePlaceholder List</h1>
+  <h1>Game List</h1>
   <article>
     <table class="table table-striped table-sm">
       <thead>
