--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -21,13 +21,13 @@
         </tr>
       </thead>
       <tbody>
-        @if (TableLowercaseNamePlaceholder == null)
+        @if (games == null)
         {
           <tr>
             @* LoadingCountCodePlaceholder *@
           </tr>
         }
-        else if (TableLowercaseNamePlaceholder.Count == 0)
+        else if (games.Count == 0)
         {
           <tr>
             @* ZeroCountCodePlaceholder *@
@@ -35,7 +35,7 @@
         }
         else
         {
-          @foreach (var game in TableLowercaseNamePlaceholder)
+          @foreach (var game in games)
           {
             <tr>
               <td>@game.Id</td>
@@ -55,7 +55,7 @@
 </section>
 
 @code {
-  List<Game>? TableLowercaseNamePlaceholder = null;
+  List<Game>? games = null;
 
   protected override async Task OnInitializedAsync()
   {
@@ -67,6 +67,6 @@
       return;
     }
 
-    TableLowercaseNamePlaceholder = await GameAdminRepository.GetAllAsync(userName);
+    games = await GameAdminRepository.GetAllAsync(userName);
   }
 }
