--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -28,7 +28,7 @@
     <h1>HumanNamePlaceholder Modification</h1>
   }
   <article>
-    <EditForm class="container" Model="EntityLowercaseNamePlaceholderAdminEditModel" OnSubmit="HandleSubmit">
+    <EditForm class="container" Model="gameAdminEditModel" OnSubmit="HandleSubmit">
 
       @* EditRowCodePlaceholder *@
 
@@ -58,7 +58,7 @@
 @code {
   [Parameter]
   public Guid Id { get; set; }
-  EntityNamePlaceholderAdminEditModel EntityLowercaseNamePlaceholderAdminEditModel { get; set; } = new EntityNamePlaceholderAdminEditModel();
+  EntityNamePlaceholderAdminEditModel gameAdminEditModel { get; set; } = new EntityNamePlaceholderAdminEditModel();
 
   @* ListDeclarationCodePlaceholder *@
 
@@ -96,11 +96,11 @@
 
     if (databaseEntityNamePlaceholderAdminDto == null)
     {
-      EntityLowercaseNamePlaceholderAdminEditModel = new EntityNamePlaceholderAdminEditModel();
+      gameAdminEditModel = new EntityNamePlaceholderAdminEditModel();
     }
     else
     {
-      EntityLowercaseNamePlaceholderAdminEditModel = EntityNamePlaceholderAdminEditModel.FromEntityNamePlaceholderAdminDto(databaseEntityNamePlaceholderAdminDto);
+      gameAdminEditModel = EntityNamePlaceholderAdminEditModel.FromEntityNamePlaceholderAdminDto(databaseEntityNamePlaceholderAdminDto);
     }
   }
 
@@ -116,17 +116,17 @@
 
     @* RequiredPropertyPlaceholder *@
 
-    @* if (string.IsNullOrWhiteSpace(EntityLowercaseNamePlaceholderAdminEditModel.Name))
+    @* if (string.IsNullOrWhiteSpace(gameAdminEditModel.Name))
     {
       return;
     } *@
 
-    var EntityLowercaseNamePlaceholderAdminDto = EntityNamePlaceholderAdminEditModel.ToEntityNamePlaceholderAdminDto(EntityLowercaseNamePlaceholderAdminEditModel);
-    EntityLowercaseNamePlaceholderAdminDto.ApplicationUserName = userName;
+    var gameAdminDto = EntityNamePlaceholderAdminEditModel.ToEntityNamePlaceholderAdminDto(gameAdminEditModel);
+    gameAdminDto.ApplicationUserName = userName;
 
     if (Id.Equals(Guid.Empty))
     {
-      var newEntityNamePlaceholderAdminDto = await EntityNamePlaceholderAdminRepository.AddAsync(EntityLowercaseNamePlaceholderAdminDto);
+      var newEntityNamePlaceholderAdminDto = await EntityNamePlaceholderAdminRepository.AddAsync(gameAdminDto);
 
       if (newEntityNamePlaceholderAdminDto == null)
       {
@@ -137,7 +137,7 @@
     }
     else
     {
-      await EntityNamePlaceholderAdminRepository.EditAsync(EntityLowercaseNamePlaceholderAdminDto);
+      await EntityNamePlaceholderAdminRepository.EditAsync(gameAdminDto);
     }
   }
 
