gawk -i inplace "{ gsub(/EntityNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor

--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -3,7 +3,7 @@
 @rendermode InteractiveAuto
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
-@inject IEntityNamePlaceholderAdminRepository EntityNamePlaceholderAdminRepository
+@inject IGameAdminRepository GameAdminRepository
 @attribute [Authorize(Roles = "Admin")]
 
 @* InjectionCodePlaceholder *@
@@ -58,7 +58,7 @@
 @code {
   [Parameter]
   public Guid Id { get; set; }
-  EntityNamePlaceholderAdminEditModel gameAdminEditModel { get; set; } = new EntityNamePlaceholderAdminEditModel();
+  GameAdminEditModel gameAdminEditModel { get; set; } = new GameAdminEditModel();
 
   @* ListDeclarationCodePlaceholder *@
 
@@ -92,15 +92,15 @@
       return;
     }
 
-    var databaseEntityNamePlaceholderAdminDto = await EntityNamePlaceholderAdminRepository.GetByIdAsync(userName, Id);
+    var databaseGameAdminDto = await GameAdminRepository.GetByIdAsync(userName, Id);
 
-    if (databaseEntityNamePlaceholderAdminDto == null)
+    if (databaseGameAdminDto == null)
     {
-      gameAdminEditModel = new EntityNamePlaceholderAdminEditModel();
+      gameAdminEditModel = new GameAdminEditModel();
     }
     else
     {
-      gameAdminEditModel = EntityNamePlaceholderAdminEditModel.FromEntityNamePlaceholderAdminDto(databaseEntityNamePlaceholderAdminDto);
+      gameAdminEditModel = GameAdminEditModel.FromGameAdminDto(databaseGameAdminDto);
     }
   }
 
@@ -121,23 +121,23 @@
       return;
     } *@
 
-    var gameAdminDto = EntityNamePlaceholderAdminEditModel.ToEntityNamePlaceholderAdminDto(gameAdminEditModel);
+    var gameAdminDto = GameAdminEditModel.ToGameAdminDto(gameAdminEditModel);
     gameAdminDto.ApplicationUserName = userName;
 
     if (Id.Equals(Guid.Empty))
     {
-      var newEntityNamePlaceholderAdminDto = await EntityNamePlaceholderAdminRepository.AddAsync(gameAdminDto);
+      var newGameAdminDto = await GameAdminRepository.AddAsync(gameAdminDto);
 
-      if (newEntityNamePlaceholderAdminDto == null)
+      if (newGameAdminDto == null)
       {
         return;
       }
 
-      NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{newEntityNamePlaceholderAdminDto.Id}");
+      NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{newGameAdminDto.Id}");
     }
     else
     {
-      await EntityNamePlaceholderAdminRepository.EditAsync(gameAdminDto);
+      await GameAdminRepository.EditAsync(gameAdminDto);
     }
   }
 
@@ -156,7 +156,7 @@
       return;
     }
 
-    await EntityNamePlaceholderAdminRepository.DeleteAsync(userName, Id);
+    await GameAdminRepository.DeleteAsync(userName, Id);
     NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-list");
   }
 
