--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -1,5 +1,5 @@
-@page "/admin/UrlNamePlaceholder-edit"
-@page "/admin/UrlNamePlaceholder-edit/{id:guid}"
+@page "/admin/game-edit"
+@page "/admin/game-edit/{id:guid}"
 @rendermode InteractiveAuto
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
@@ -40,7 +40,7 @@
           }
         </div>
         <div class="col">
-          <a href="/admin/UrlNamePlaceholder-list">Cancel</a>
+          <a href="/admin/game-list">Cancel</a>
           @if (Id.Equals(Guid.Empty))
           {
             <button type="submit" class="btn btn-primary">Create</button>
@@ -133,7 +133,7 @@
         return;
       }
 
-      NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{newGameAdminDto.Id}");
+      NavigationManager.NavigateTo($"/admin/game-edit/{newGameAdminDto.Id}");
     }
     else
     {
@@ -157,7 +157,7 @@
     }
 
     await GameAdminRepository.DeleteAsync(userName, Id);
-    NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-list");
+    NavigationManager.NavigateTo($"/admin/game-list");
   }
 
   @* OnChangeCodePlaceholder *@
