--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -41,6 +41,7 @@
             <tr>
               <td>@game.Id</td>
 
+              <td>@game?.Name</td>
               @* ListItemCodePlaceholder *@
 
               <td>
