--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -25,6 +25,7 @@
         @if (games == null)
         {
           <tr>
+            <td colspan="3">Loading...</td>
             @* LoadingCountCodePlaceholder *@
           </tr>
         }
