--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -8,7 +8,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ApplicationNamePlaceholder.BusinessLogic.Entities
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.Dtos
-@using ApplicationNamePlaceholder.BusinessLogic.Repositories
-@using ApplicationNamePlaceholder.Client
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Entities.Dtos
+@using BlazorCrudDotNet8.BusinessLogic.Repositories
+@using BlazorCrudDotNet8.Client
