gawk -i inplace "{ gsub(/@\* NavMenuLinkCodePlaceholder \*@/, \"<li class=\\\"nav-item\\\">\n\ \ \ \ \ \ \ \ <NavLink class=\\\"nav-link\\\" data-testid=\\\"gameNavLink\\\" href=\\\"admin/game-list\\\">\n\ \ \ \ \ \ \ \ \ \ Games\n\ \ \ \ \ \ \ \ </NavLink>\n </li>\n\n\ \ \ \ \ \ @\* NavMenuLinkCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8.Client/Layout/SideBar.razor

--- a/BlazorCrudDotNet8.Client/Layout/SideBar.razor
+++ b/BlazorCrudDotNet8.Client/Layout/SideBar.razor
@@ -26,6 +26,12 @@
         </NavLink>
       </li>
 
+      <li class="nav-item">
+        <NavLink class="nav-link" data-testid="gameNavLink" href="admin/game-list">
+          Games
+        </NavLink>
+ </li>
+
       @* NavMenuLinkCodePlaceholder *@
 
     </ul>
