gawk -i inplace "{ gsub(/ApplicationNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8.Client/*

--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -8,7 +8,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ApplicationNamePlaceholder.BusinessLogic.Entities
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.Dtos.Admin
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.ViewModels.Admin
-@using ApplicationNamePlaceholder.BusinessLogic.Repositories.Admin
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Entities.Dtos.Admin
+@using BlazorCrudDotNet8.BusinessLogic.Entities.ViewModels.Admin
+@using BlazorCrudDotNet8.BusinessLogic.Repositories.Admin
