gawk -i inplace "{ gsub(/@\* EditRowCodePlaceholder \*@/, \"<div class=\\\"row\\\">\n\ \ \ \ \ \ \ \ <div class=\\\"col\\\">\n\ \ \ \ \ \ \ \ \ \ <label>\n\ \ \ \ \ \ \ \ \ \ \ \ Name:\n\ \ \ \ \ \ \ \ \ \ \ \ <InputText @bind-Value=\\\"gameAdminEditViewModel.Name\\\" data-testid=\\\"gameAdminEditName\\\" />\n\ \ \ \ \ \ \ \ \ \ </label>\n\ \ \ \ \ \ \ \ </div>\n\ \ \ \ \ \ </div>\n\ \ \ \ \ \ @\* EditRowCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor

--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -31,6 +31,14 @@
       <DataAnnotationsValidator />
       <ValidationSummary class="text-danger" />
 
+      <div class="row">
+        <div class="col">
+          <label>
+            Name:
+            <InputText @bind-Value="gameAdminEditViewModel.Name" data-testid="gameAdminEditName" />
+          </label>
+        </div>
+      </div>
       @* EditRowCodePlaceholder *@
 
       <div class="row">
