--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -10,21 +10,21 @@
 
   @if (Id.Equals(Guid.Empty))
   {
-    <PageTitle>HumanNamePlaceholder Creation</PageTitle>
+    <PageTitle>Game Creation</PageTitle>
   }
   else
   {
-    <PageTitle>HumanNamePlaceholder Modification</PageTitle>
+    <PageTitle>Game Modification</PageTitle>
   }
 
 <section>
   @if (Id.Equals(Guid.Empty))
   {
-    <h1>HumanNamePlaceholder Creation</h1>
+    <h1>Game Creation</h1>
   }
   else
   {
-    <h1>HumanNamePlaceholder Modification</h1>
+    <h1>Game Modification</h1>
   }
   <article>
     <EditForm class="container" Model="gameAdminEditVm" OnValidSubmit="HandleSubmit">
