gawk -i inplace "{ gsub(/HumanNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -6,7 +6,7 @@
 @inject IPageHelper PageHelper
 @inject EditSuccess EditSuccessState
 
-<PageTitle>HumanNamePlaceholder Edit</PageTitle>
+<PageTitle>Game Edit</PageTitle>
 
 @if (Game is null && !Busy)
 {
